--- a/public/components/events.html
+++ b/public/components/events.html
@@ -9,22 +9,8 @@
 
     <!-- Festival Logo Carousel -->
     <div class="swiper festival-carousel">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="../images/cleggan-fringe-festival.jpg" alt="Cleggan Fringe Festival Logo"/>
-        </div>
-        <div class="swiper-slide">
-          <img src="../images/doolin-folkfest-2025.png" alt="Doolin FolkFest Logo"/>
-        </div>
-        <div class="swiper-slide">
-          <img src="../images/galway-folk-festival.png" alt="Galway Folk Festival Logo"/>
-        </div>
-        <div class="swiper-slide">
-          <img src="../images/westport-folk-and-bluegrass-festival.jpg" alt="Westport Folk and Bluegrass Festival Logo"/>
-        </div>
-        <div class="swiper-slide">
-          <img src="../images/cahersiveen-mountain-roots.jpg" alt="Cahersiveen Mountain Roots Music Weekend Logo"/>
-        </div>
+      <div id="festival-carousel-wrapper" class="swiper-wrapper">
+        <!-- Slides will be dynamically generated here -->
       </div>
       <div class="swiper-pagination"></div>
     </div>
