--- a/public/components/hero.html
+++ b/public/components/hero.html
@@ -1,7 +1,7 @@
 <section id="home" class="relative text-white text-center">
   <img
     id="cover-photo"
-    src=""
+    src="https://i.imgur.com/3CRs4O4.jpeg"
     alt="A group of people playing instruments by a river in Galway."
     class="w-full h-[70vh] object-cover"
   />
