--- a/public/components/ui/modal.html
+++ b/public/components/ui/modal.html
@@ -4,6 +4,7 @@
 >
   <form id="modal-form" class="bg-white p-6 rounded-lg shadow-xl max-w-sm w-full mx-4">
     <p id="modal-message" class="text-lg mb-4"></p>
+    <input type="username" autocomplete="username" style="display:none">
     <input
       type="password"
       id="modal-input"
