--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -837,6 +837,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(253 230 138 / var(--tw-border-opacity, 1));
 }
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
@@ -844,6 +848,9 @@ video {
 .border-stone-200 {
   --tw-border-opacity: 1;
   border-color: rgb(231 229 228 / var(--tw-border-opacity, 1));
+}
+.bg-accent {
+  background-color: var(--accent-color);
 }
 .bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
@@ -870,6 +877,9 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+.bg-primary {
+  background-color: var(--primary-color);
 }
 .bg-red-500 {
   --tw-bg-opacity: 1;
@@ -1025,6 +1035,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity, 1));
 }
+.text-primary {
+  color: var(--primary-color);
+}
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
@@ -1146,6 +1159,9 @@ video {
 }
 .hover\:bg-opacity-80:hover {
   --tw-bg-opacity: 0.8;
+}
+.hover\:text-accent:hover {
+  color: var(--accent-color);
 }
 .hover\:text-blue-700:hover {
   --tw-text-opacity: 1;
