--- a/public/components/events.html
+++ b/public/components/events.html
@@ -1,9 +1,9 @@
-<section id="special-events" class="py-16 md:py-20 lg:py-24 bg-stone-50 border-y border-stone-200">
+<section id="special-events" class="py-16 md:py-20 lg:py-24 bg-white">
   <div class="container mx-auto px-4 sm:px-6">
-    <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold text-center text-primary mb-4">
+    <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold text-center text-primary mb-4 font-secondary">
       Festivals & Special Events
     </h2>
-    <p class="text-center text-lg text-gray-600 max-w-4xl mx-auto mb-12">
+    <p class="text-center text-lg text-grey-dark max-w-4xl mx-auto mb-12 font-primary">
       We love taking part in festivals around Ireland. Here are some of our favourites we've been to, and hope to see again!
     </p>
 
