--- a/public/components/header.html
+++ b/public/components/header.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-4 sm:px-6 py-3 flex justify-between items-center">
         <div class="flex items-center space-x-4">
             <div class="w-14 h-14">
-                <img src="images/logo.svg" alt="Galway Jam Circle Logo" class="rounded-full" />
+                <img id="site-logo" src="" alt="Galway Jam Circle Logo" class="rounded-full" />
             </div>
             <div class="text-xl sm:text-2xl font-bold tracking-tight font-secondary">Galway Jam Circle</div>
         </div>
